--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "backpack/crud": "4.1.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "vedmant/laravel-feed-reader": "^1.5"
+        "willvincent/feeds": "^2.2"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
